hm4 gap correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -474,7 +474,7 @@ img {
 .project-items {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 23px;
+  column-gap: 24px;
   row-gap: 48px;
   flex-basis: calc((100%-2 * 24) / 3);
 }
@@ -484,7 +484,6 @@ img {
 }
 
 .project-item-link:is(:hover, :focus) {
-  border: 0.5px solid var(--button-bgd-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
